# jc-ftpserver

./: .gitignore  CMakeLists.txt  README.md  ftpserver.conf  ftpserver.windows.conf
include/jcftp/: config.h  ftp_server.h  ftp_session.h  socket.h  string_utils.h
src/: config.cpp  ftp_server.cpp  ftp_session.cpp  main.cpp  socket_posix.cpp  socket_windows.cpp  string_utils.cpp
